grocy/grocy-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    name: grocy
    namespace: grocy
  name: grocy
spec:
  selector:
    matchLabels:
      name: grocy
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        name: grocy
    spec:
      containers:
        - env:
            - name: PUID
              value: "1000"
            - name: PGID
              value: "1000"
            - name: TZ
              value: "America/Chicago"
          #        - name: PHP_MAX_POST
          #          value: 100M
          #        - name: PHP_MEMORY_LIMIT
          #          value: 512M
          #        image: grocy/grocy-docker:grocy
          # image: linuxserver/grocy:arm32v7-v2.5.2-ls44
          image: linuxserver/grocy:arm32v7-latest
          name: grocy
          ports:
            - containerPort: 9000
            - containerPort: 80
            - containerPort: 443
          volumeMounts:
            - mountPath: /config
              name: grocy-database
      restartPolicy: Always
      volumes:
        - name: grocy-database
          persistentVolumeClaim:
            claimName: grocy-database
