grocy/barcode-buddy-ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    name: barcodebuddy
  name: barcodebuddy
  namespace: grocy
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 80
  selector:
    name: barcodebuddy
  type: LoadBalancer
  externalTrafficPolicy: Local
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/ingress.class: nginx
  labels:
    name: barcodebuddy
  name: barcodebuddy-ingress
  namespace: grocy
spec:
  tls:
    - hosts:
        - barcodebuddy.example.com
      secretName: barcodebuddy-example-com
  rules:
    - host: barcodebuddy.example.com
      http:
        paths:
          - backend:
              serviceName: barcodebuddy
              servicePort: 80
            path: /
